Changelog
---------

3.0b2 - Unreleased
~~~~~~~~~~~~~~~~~~



3.0b1 - 2010-03-05
~~~~~~~~~~~~~~~~~~

- Add back the hash management UI with added functionality to set shared
  secret.
  [elro]

- Add properties for cookie domain and ticket validity timeout.
  [elro]

- Use mod_auth_tkt format cookies to give us a session validity timeout.
  By default we use a more secure HMAC SHA-256 hashing scheme. An MD5 based
  scheme compatible with other mod_auth_tkt implementations is optional.
  [elro]

- Remove the source component indirection.
  [elro]

3.0a2 - 2009-11-13
~~~~~~~~~~~~~~~~~~

- Remove hash management UI which had been accidentally re-merged.
  [davisagli]

3.0a1 - 2009-04-04
~~~~~~~~~~~~~~~~~~

- Avoid deprecation warning for the sha module in Python 2.6.
  [hannosch]

- Declare test dependencies in an extra.
  [hannosch]

- Specify package dependencies.
  [hannosch]

- Fixed the remaining tests to work with the new keyring backend.
  [hannosch]

- Fixed a component lookup call in the HashSession source.
  [davisagli, hannosch]

- Update default (hash) session source to use plone.keyring to manage
  the secrets.
  [wichert]


2.1  - February 4, 2009
~~~~~~~~~~~~~~~~~~~~~~~

- Protect the setupSession call with the ManageUsers permission.
  Fixes possible privilege escalation.
  [maurits]

- Make the cookie lifetime configurable. Patch by Rok Garbas. Fixes
  http://dev.plone.org/plone/ticket/7248
  [wichert, garbas]


2.0  - July 8, 2008
~~~~~~~~~~~~~~~~~~~

- Fix CSRF protection for managing server secrets via the Plone session
  plugin for PAS. Fixes http://dev.plone.org/plone/ticket/8176
  [witsch]


1.2  - February 15, 2007
~~~~~~~~~~~~~~~~~~~~~~~~

- Use the binascii base64 methods to encode/decode the session cookie. This
  prevents newlines being inserted in long cookies.
  [wichert]


1.1  - September 11, 2007
~~~~~~~~~~~~~~~~~~~~~~~~~

- Use the userid instead of the login name in session identifiers. This