@@ -4,7 +4,8 @@ Changelog
 3.0b2 - Unreleased
 ~~~~~~~~~~~~~~~~~~
 
-
+- Catch a ComponentLookupError in authenticateCredentials.
+  [elro]
 
 3.0b1 - 2010-03-05
 ~~~~~~~~~~~~~~~~~~
